use langchain_community

--- a/colab.ipynb
+++ b/colab.ipynb
@@ -27,9 +27,9 @@
         "from langchain.text_splitter import CharacterTextSplitter\n",
         "from langchain_community.vectorstores import Chroma\n",
         "from langchain.chains import ConversationalRetrievalChain, RetrievalQA\n",
-        "from langchain.chat_models import ChatOpenAI\n",
+        "from langchain_community.chat_models import ChatOpenAI\n",
         "from langchain.memory import ConversationBufferMemory\n",
-        "from langchain.embeddings import HuggingFaceEmbeddings\n",
+        "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")"
       ]
