use langchain_openai

--- a/localtunnel.ipynb
+++ b/localtunnel.ipynb
@@ -12,7 +12,8 @@
     "!pip install -q openai\n",
     "!pip install -q chromadb\n",
     "!pip install -q langchain_community\n",
-    "!pip install -q streamlit_chat"
+    "!pip install -q streamlit_chat\n",
+    "!pip install -q langchain_openai"
    ]
   },
   {
@@ -32,7 +33,7 @@
     "from langchain_community.vectorstores import Chroma\n",
     "from langchain.memory import ConversationBufferMemory\n",
     "from langchain_community.document_loaders import PyPDFLoader, TextLoader, Docx2txtLoader\n",
-    "from langchain_community.chat_models import ChatOpenAI\n",
+    "from langchain_openai import ChatOpenAI\n",
     "\n",
     "\n",
     "def initialize_session_state():\n",
