--- a/colab.ipynb
+++ b/colab.ipynb
@@ -12,7 +12,9 @@
         "!pip install pypdf -q\n",
         "!pip install sentence-transformers -q\n",
         "!pip install chromadb -q\n",
-        "!pip install openai -q"
+        "!pip install openai -q\n",
+        "!pip install langchain_community -q\n",
+        "!pip install langchain_openai -q"
       ]
     },
     {
@@ -27,7 +29,7 @@
         "from langchain.text_splitter import CharacterTextSplitter\n",
         "from langchain_community.vectorstores import Chroma\n",
         "from langchain.chains import ConversationalRetrievalChain, RetrievalQA\n",
-        "from langchain_community.chat_models import ChatOpenAI\n",
+        "from langchain_openai import ChatOpenAI\n",
         "from langchain.memory import ConversationBufferMemory\n",
         "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
         "import warnings\n",
