--- a/colab-llama.ipynb
+++ b/colab-llama.ipynb
@@ -112,7 +112,7 @@
         "    if query == \"exit\":\n",
         "        break\n",
         "    result = qa({\"query\": query})\n",
-        "    print(\"ChatGPT:\", result[\"result\"])"
+        "    print(\"LLAMA:\", result[\"result\"])"
       ]
     }
   ],
